Done For The Night Officially. Google AdMob implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ride The Bus</string>
+    <string name="platform_logo">Platform Logo</string>
 </resources>
